@@ -13,9 +13,12 @@ if prefer :apps4, 'rails-omniauth'
   prefs[:pry] = false
   prefs[:quiet_assets] = true
   prefs[:starter_app] = false
+  add_gem 'high_voltage'
 
   after_everything do
-
+    generate 'pages:home -f'
+    generate 'pages:about -f'
+    generate 'layout:navigation -f'
     repo = 'https://raw.github.com/RailsApps/rails-omniauth/master/'
 
     # >-------------------------------[ Models ]--------------------------------<
@@ -24,14 +27,14 @@ if prefer :apps4, 'rails-omniauth'
 
     # >-------------------------------[ Controllers ]--------------------------------<
 
-    copy_from_repo 'app/controllers/home_controller.rb', :repo => repo
     copy_from_repo 'app/controllers/sessions_controller.rb', :repo => repo
     gsub_file 'app/controllers/sessions_controller.rb', /twitter/, prefs[:omniauth_provider]
     copy_from_repo 'app/controllers/users_controller.rb', :repo => repo
 
     # >-------------------------------[ Views ]--------------------------------<
 
-    copy_from_repo 'app/views/home/index.html.erb', :repo => repo
+    copy_from_repo 'app/views/visitors/index.html.erb', :repo => repo
+    copy_from_repo 'app/views/users/_user.html.erb', :repo => repo
     copy_from_repo 'app/views/users/edit.html.erb', :repo => repo
     copy_from_repo 'app/views/users/index.html.erb', :repo => repo
     copy_from_repo 'app/views/users/show.html.erb', :repo => repo
